# Recycle

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/org/huangxk/recycle/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: libplc-jni.cpp
app/src/main/cpp/snap7/sys/: snap_msgsock.cpp  snap_threads.cpp  unix_threads.h
app/src/main/java/com/jiagu/utils/: netUtil.java  serialUtil.java
app/src/main/java/org/huangxk/recycle/: CardOperator.java  CountDown.java  DataBase.java  MainApplication.java  PosWriter.java  Speeker.java  TaskData.java
app/src/main/java/org/huangxk/recycle/plc/: Connection.java  testPLC.java
app/src/main/java/org/huangxk/recycle/statusMachine/: statusAnimalSel.java  statusBase.java  statusDoorOperation.java  statusIdCard.java  statusIdFail.java  statusLauncher.java  statusManager.java  statusSetting.java  statusTaskInfo.java  statusUserInfo.java  statusUserPrint.java  statusWaitSys.java  statusWaitUser.java
app/src/main/java/org/huangxk/recycle/ui/: AnimalSelectFragment.java  DoorOperationFragment.java  FragmentBase.java  IdCardFragment.java  IdFailFragment.java  LaunchFragment.java  MainActivity.java  SettingFragment.java  TaskInfoFragment.java  UserInfoFragment.java  UserPrintFragment.java  WaitSysStoreFragment.java  WaitUserStoreFragment.java
app/src/main/res/drawable/: round_corner.xml  round_corner_solid.xml
app/src/main/res/layout/: layout_animalselect_fragment.xml  layout_dooroperation_fragment.xml  layout_idcard_fragment.xml  layout_idfail_fragment.xml  layout_launch_fragment.xml  layout_main_activity.xml  layout_setting.xml  layout_sysstore_fragment.xml  layout_userinfo_fragment.xml  layout_userprint_fragment.xml  layout_userstore_fragment.xml
app/src/main/res/values/: integers.xml  strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: nfc_tech_filter.xml
app/src/test/java/org/huangxk/recycle/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
